style(file-picker): fix search input wrong background

--- a/css/files.css
+++ b/css/files.css
@@ -309,7 +309,7 @@
 
 		/* File Picker*/
 		.dialog.file-picker {
-			.input-field__input {
+			.input-field__input, .input-field__input:focus + .input-field__label {
 				background-color: var(--ion-surface-dialog);
 			}
 
